[package]
name = "sumfilesizes"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Sum the size of a list of files or directories."
repository = "https://github.com/luser/sumfilesizes/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
number_prefix = "0.2.5"
rayon = "0.8.2"
walkdir = "1.0.1"
